# smartEnergyMeter

./: .gitignore  .gitmodules  CMakeLists.txt
doc/: EnergyMeterData.csv  SmartEnergyMeter.ods
nbproject/: configurations.xml  project.properties  project.xml
src/: main.cpp
src/app/: bt_scan.cpp  bt_scan.h
src/device/: smartEnergyMeter.cpp  smartEnergyMeter.h
src/driver/: SEMBluetoothDriver.h  SEMDriver.cpp  SEMDriver.h  TinyBDriver.cpp  TinyBDriver.h  bluetooth.cpp  bluetooth.h  gattlib_access.cpp  gattlib_access.h  smartEnergyMeter.h
